examples/errors/son0019_yes_outsideFunction copy.js
defineFunction()

yes(a === 10)
